--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 </head>
 <body>
+<h2 class="error-msg"></h2>
 <div class="audio">
-    <audio src="./path/MusicBG.mp3" autoplay class="default-audio"></audio>
+    <audio src="./path/MusicBG.mp3" autoplay loop class="default-audio"></audio>
     <audio src="./path/SoundButton.mp3" class="btn-sound"></audio>
     <audio src="./path/SoundCry.mp3" class="cry-sound"></audio>
 </div>
@@ -27,7 +28,7 @@
     <img src="./path/Shadow.png" class="intro-text animate__animated animate__fadeIn" alt="">
     <img src="./path/ButtonOkGrey.png" class="btn ok-btn btn-next" alt="">
     <div class="emoji-wrap run-animation">
-        <img src="./path/" alt="" class="emoji">
+        <img src="" alt="" class="emoji">
     </div>
     <div class="options-btn__wrap">
         <img src="./path/Button1Grey.png" class="options-btn btn" id="1" alt="">
@@ -40,18 +41,20 @@
 </div>
 <div class="steps step-3">
     <a href="" class="cta-btn">
-        <img src="./path/BubbleGirlfriend.png" class="animate__animated animate__zoomIn animate__delay-2s" alt="">
-        <img src="./path/StampFail.png" class="animate__animated animate__bounceIn animate__delay-3s animation-duration-2s" alt="">
+        <img src="./path/BubbleGirlfriend.png" class="animate__animated animate__zoomIn animate__delay-2s animate__faster" alt="">
+        <img src="./path/StampFail.png" class="stamp-fail" alt="">
         <img src="./path/ButtonTryAgain.png" alt="" class="try-again">
     </a>
 </div>
-<img src="./path" alt="">
 <script async>
     const screenSize = window.screen.width < 1920 ? '1080x1920' : '1920x1080';
     const lang = 'en';
     const path = `${screenSize}/${screenSize}_PA_${lang}_DateWGirlfriend_`;
-    document.querySelectorAll("[src]").forEach(item => item.src = item.src.replace('path/', path))
+
+    document.querySelectorAll("[src]").forEach(item => item.src = item.src.replace('path/', path));
+
+    if (screenSize === '1920x1080') document.querySelector(".options-btn__wrap").style.cssText = "width: 600px; right: 5%; text-align: center;top:18%"
 </script>
-<script src="./index.js"></script>
+<script async src="./index.js"></script>
 </body>
 </html>
